using Pig_n_Go.Core.Passenger;

namespace Pig_n_Go.Core.Services
{
    public interface IPassengerService
    {
        public PassengerModel Pay(PassengerModel passengerModel);
    }
}
